# ChangeLog for app-forensics/lynis
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-forensics/lynis/ChangeLog,v 1.54 2014/10/19 09:16:23 idl0r Exp $

*lynis-1.6.3 (19 Oct 2014)

  19 Oct 2014; Christian Ruppert <idl0r@gentoo.org> +lynis-1.6.3.ebuild:
  Version bump

*lynis-1.6.2 (30 Sep 2014)

  30 Sep 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.5.6.ebuild,
  -lynis-1.5.9.ebuild, +lynis-1.6.2.ebuild:
  Version bump, also fixes 522842

*lynis-1.5.9 (11 Aug 2014)

  11 Aug 2014; Christian Ruppert <idl0r@gentoo.org> +lynis-1.5.9.ebuild:
  Version bump

*lynis-1.5.6 (06 Jul 2014)

  06 Jul 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.5.3.ebuild,
  +lynis-1.5.6.ebuild:
  Version bump. Also fixes wrong doc permissions, bug 515626

*lynis-1.5.3 (22 May 2014)

  22 May 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.5.2.ebuild,
  +lynis-1.5.3.ebuild:
  Bump to 1.5.3...

*lynis-1.5.2 (22 May 2014)

  22 May 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.5.1.ebuild,
  +lynis-1.5.2.ebuild:
  Version bump. Add epatch_user, bug 507438

*lynis-1.5.1 (24 Apr 2014)

  24 Apr 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.5.0-r1.ebuild,
  +lynis-1.5.1.ebuild:
  Version bump

  19 Apr 2014; Christian Ruppert <idl0r@gentoo.org> lynis-1.3.0.ebuild,
  lynis-1.5.0-r1.ebuild:
  Fix HOMEPAGE and SRC_URI to pont to http://cisofy.com/lynis/

*lynis-1.5.0-r1 (11 Apr 2014)

  11 Apr 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.5.0.ebuild,
  +lynis-1.5.0-r1.ebuild:
  Revbump. Make default perms more strict, bug 507436

*lynis-1.5.0 (10 Apr 2014)

  10 Apr 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.4.9.ebuild,
  +lynis-1.5.0.ebuild:
  Version bump.

*lynis-1.4.9 (03 Apr 2014)

  03 Apr 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.4.8.ebuild,
  +lynis-1.4.9.ebuild:
  Version bump

*lynis-1.4.8 (27 Mar 2014)

  27 Mar 2014; Christian Ruppert <idl0r@gentoo.org> -lynis-1.4.7.ebuild,