@@ -7,17 +7,13 @@ DIST lynis-1.6.2.tar.gz 166513 SHA256 fdaaabd9e2d159af7677b8012a1ac6e0230e357918
 DIST lynis-1.6.3.tar.gz 169854 SHA256 581ed4e53092d18996f49b522054b279a80e126d844dafa6ff979dd79f0b31cc SHA512 bb6211968576e2e1747e025c8772030db38fd66ec7c55c2a031c495efd7ac10d017f5fcb315ef1d3dcadb56521ea5a198c4aeb07dfad1adec0ab0e34dd4219d4 WHIRLPOOL 47a04414bdd075de51537d8670d284bda88c46e93398a1d8fc3a30768df3bd289756400fe6ece5b548b6013b9be0e5aca9ae00fa39331231e883ea1a671b3d82
 EBUILD lynis-1.3.0.ebuild 1038 SHA256 64062588fefb257de0ca988c3ee5731c135192e2bc3a87aaa2cc126f1faec142 SHA512 a75ec70fa148d1392872f587b9a1b3166da179c148e0b41d8b07ba4bc11ec4997b0738c9d56603b9b1ce5aa74e32ec82966df7d0cd0cb3a17e5bf3b6d305df98 WHIRLPOOL 914776bdb6a8030af1c82092bbeb5a5bf1f9578dc3863c7e22424712cbdaffd2e2647678777a07d2c133d02cc1a2ce3c6c727a681e52c97120f4436cc00773ec
 EBUILD lynis-1.6.2.ebuild 1089 SHA256 25f34e46ae473c0972b80ace0fd0cea28fc744e4b4bbdc15fcff01619c271680 SHA512 54347076ffde33bf88684165f79a944077dc434b4583e23f0a1dcb423958d4deaebf8da56720374df1ddd2b048773a65869e17d0ef0eee0db8fae3f8842ecfce WHIRLPOOL d488152909d4ddeca45388e020d6a7600047e08319f46583a538ee7e39f3fbc1e210a2dbed50ada2f3b38fd6be352b46d7944c9d4034fb63c17b0df13862dd82
-EBUILD lynis-1.6.3.ebuild 1092 SHA256 fc481df80147e2d402b1859d57b90208668c59f181aa2aff3f38115dde90831e SHA512 d55cf3787e1e7eb38fd2d7cade04f7b0eae02f4390d6ce4c24871add8cab054655a303ad0539ed6e7b228509ba9240c1cbb3d3338f94c4b3e1fca6538409ea27 WHIRLPOOL d9e300aa64aee8c49b6f0420145171618565a403619a3cb2892f15abc63fa6f983ff3282499beb5a88a7e805588156359b976b1b0f333ef5d547944ef02840fa
-MISC ChangeLog 7684 SHA256 e343ecf3dfc95598d889659f587a8feb27f8b03b47add9aeddd2e50fbdf74cb4 SHA512 4be364dbd572f1e2dad6d2bda8da5a12e11ac5701bfefbb0fb424b34dc56d1e31ff93eb5924ddae1e75a7cc35426dc0337ecfbf78acce76e1f3bf2cf18a5ba80 WHIRLPOOL acf2e6412d5faa61f6e76489ca21726b6fac8330cb63e5f1515365f1f1ead9b9161927f61f50285234841dc8ec417c9a10eeabc8c0c3677ec87369b9e60ddebc
+EBUILD lynis-1.6.3.ebuild 1084 SHA256 93be511725c23fb608e765690c9a032ffc6ca0726d67dacbbdc8be385991cf05 SHA512 09956ee2ad0e02c4a9ec98c1d1f4e15b07e469f20dd5b4b203aaaec914437a3b768403991a05f88287499b1884a879614bd9baffb21201bf96cbbef8c03fe7a0 WHIRLPOOL 917ad93b20e28b3bec39085e4a220e6f889be1f5662cd4bb4a6474c105c80c920eeb028eeb4db7e07dd700ddfebee0b39b19ff4f70b8449061ebb8a0d8b4c15c
+MISC ChangeLog 7851 SHA256 6ee1e395ce3115989f93cec532604ffa07c3e815091ed410f143ea22a1c8fd2a SHA512 d30b0a4011920707653555226ab812f94ecf784b78223087db32b02f841093f8c93e1537e8ad8763c60cc2f9c566e47fedfb5ea036ecb425cd5155f47747f46d WHIRLPOOL ea9a0c8de63185cab5c5b8247b6dd83f7176f79cd42c2f232f1eaf43d565c00e9fddd71422b9c45b7c07cd20281e52297664d9ff575b8596449c1d5b42fc8e67
 MISC metadata.xml 254 SHA256 01509f805151143c7aad5241de9ea61ba92f17bf41222ce7e37b650a504131ec SHA512 ae6cd2b19d9070883747fba98a462fb3b0049b69ba98deef52faeef48f298f0b1ffc85a46dcdea753191f36d4361e6b34a62e2bbcdf264defe5d270056fc6895 WHIRLPOOL d38eafc431ab48a08cefa7860b330eb746ad0a570e6fc6c7204b14d9d7044789492862fbc5444727e224d6443b6120e907c47b8c70ed6a8ec96303d05fca15c2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJUQ4FoAAoJEMOx0zmdw4Z1sGIH/Axu42ZzntLNhn82kg3WKDYn
-j91nM8BHh/dcc6k2o8z6ioNSHc9KPMLvC3zRzscqtCYcO0n2o8qLlhid+HTVzWoZ
-fZl7y4chEzc3FwAvIum+oEJQiB43rVCvvzWSNLhQwKl5atNinqkR5MA4OFN/HSXu
-gtHaDsQ6v/NzAXL1ZIXOc7p0Y7gBRcHWgrnVr9K/gs28Qxve8XrSbLt1Y0GjEpCy
-PipIX+aZQNzH2wklR5az84E83ITkiwPH5ZXmbaLq4A7Op3SUwjpfxQgwh8CeS20p
-sJDsY2oMoPQBQUCtjTaGm53ESRrtTBDMKeTLsvWwSIDxmyV7LBJj7HONtVrbtN4=
-=RJq9
+iEYEAREIAAYFAlRFdKUACgkQcaHudmEf86rJrACeOqKs+1m6n9LfkOBF4v/S+8U2
+6kcAn22r42+zvOrT9hvbDMGEoZUBXrEF
+=UA0y
 -----END PGP SIGNATURE-----
