@@ -8,4 +8,4 @@ RDEPEND=app-shells/bash
 SLOT=0
 SRC_URI=http://cisofy.com/files/lynis-1.6.3.tar.gz
 _eclasses_=bash-completion-r1	c8399c7c7ecbcf7ed6e5bd3abb3d4af3	eutils	32548a82e42dc26e3312581476d2f20c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	6ce35cb0d56d962486c858d41604c820
-_md5_=afe08a9eb99eb6b5e490b4ce1868e73c
+_md5_=4348c837e68f491875d00a744908fa14
