@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install prepare
+DEPEND=dev-libs/lzo:2= sys-libs/zlib:0= sys-fs/e2fsprogs:0= sys-apps/acl app-text/asciidoc app-text/docbook-xml-dtd:4.5 app-text/xmlto
+DESCRIPTION=Btrfs filesystem utilities
+EAPI=5
+HOMEPAGE=https://btrfs.wiki.kernel.org
+KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-2
+RDEPEND=dev-libs/lzo:2= sys-libs/zlib:0= sys-fs/e2fsprogs:0=
+RESTRICT=test
+SLOT=0/0
+SRC_URI=https://www.kernel.org/pub/linux/kernel/people/kdave/btrfs-progs/btrfs-progs-v3.17.tar.xz
+_eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	6ce35cb0d56d962486c858d41604c820
+_md5_=55b7e5708f2b22cb3f999b3fc9c85302
