@@ -19,6 +19,7 @@ DIST btrfs-progs-v3.14.2.tar.xz 275372 SHA256 70e1d0ca887bfa5062dc74cc5d4556c19a
 DIST btrfs-progs-v3.16.1.tar.xz 290936 SHA256 93f28c735994f68ab0a19acf583be6c8688a69d9bfc174bcc9a11bebc2706e80 SHA512 58959236346b86bbf694a0e7510cbb81ac2a9bf1c9b9061e95bf5ce30b1dabd42402d3017aa0129ec2e72f55b90b5db54550eeca4b29aca3948e6daac972dc63 WHIRLPOOL c5bd6f60314c0fc62250bb9df9fdc2e6ad2e8fb655c91bd53a3c4fabd394ba85c4301329983895de24a52802db0aac7747b98d597f4572237b894854047dafe0
 DIST btrfs-progs-v3.16.2.tar.xz 291604 SHA256 d4d62abe0c2b8e86888f96e4bd21ca7e25c2d53120a3b9e8c6f987344147732b SHA512 7dc0f2f8f0bbddbbf1d4d99854425341c4b3997334c65d7e936bcec1ee5ca880101b8b45498721502857b478edae6237a934c7d4acb735de43c6d8ff35efe53b WHIRLPOOL 19e1fadeefcd40bfecf1b957c37da3387351e1f6cae04add59fd689524338c165e3547b799520e74bacc351ef236eec2481c1043159b58358b77cd74cf3db281
 DIST btrfs-progs-v3.16.tar.xz 290544 SHA256 9a7651df6c0430b75fa0637519ca5be29a756684dada241b4398007ae3cb0b5e SHA512 dd1f4bc13e62623792121d0f2a2a388be85bae4eec4abc348e0d21949fefa58863e7bf56515dd57022c312ee02d2fa76cc7b1a1c2d78a36532961b22b410a4db WHIRLPOOL 36d08d3420458ffbdf9bf5d41fdaee2ab6e6b56793710e1d182e2e48bd665795674a008b26db802c080f6a8125c966a636ceeca55c6a41c06bf10385d5a14e35
+DIST btrfs-progs-v3.17.tar.xz 370560 SHA256 ecafbf71e729c7e907dac488c2e0c94983dd38420f56dce85e2a4310a06bf0a0 SHA512 2363e4493f375c9e74398ea859bc63d5d5b5534554aae02ad08dcef8e974cf9e9643823552beb76d78c4884cb4f1db85f305a5186b9985f164b99b1a33d87900 WHIRLPOOL d7153b68187508dfeb9da6ce44b954668dd82ce6266b20b6f7d9896c666bf2999df1bc6cb207e8f0c7be12f87995a876a3cb04ad79aa030a72a128d50b6dca15
 EBUILD btrfs-progs-0.19-r3.ebuild 2733 SHA256 77ae329be086d9d70848c9f63ecb46dc6f820ebacba9e3bf094c092094a0ff8b SHA512 97d92488a923e1efc938f8bed4ece3f6893192fd16976dcb24bf28a778e319dfd4442c8660e9599d73a97ca4e269a416364422a1d7c80868938a4e23728152a8 WHIRLPOOL e1d4f67116c48aafea82c96bd5fb895dac531f6aa62ca225b8e14df10feffda0a7e5c6ef5563992bf20d14e7ccf7e1df035ab8561849e4d9a48b9579a14e7e5b
 EBUILD btrfs-progs-0.19.11.ebuild 1687 SHA256 93e3661de2904fbc30d6a553b9bf580670b31976daa00b972844b473a1f9ef73 SHA512 1812c567a8382ea1d0ef42866303afc44fbbb685e98a78f584bd7c3f73d9310ebf4891d22f24efbc0cee0729e8595da2481e244f6651dd843303d47dc46d494c WHIRLPOOL a406c5d018a2412f20fbf5bc53218fbe211d35a2777533047872dac2372e7d811308890d04e22dbabb23a9ceff3233d1f0512622ec9205d9225c4b8cc7ba3d8b
 EBUILD btrfs-progs-0.20_rc1.ebuild 1572 SHA256 72aac33b871a604d5f668d2fabcc4e546535410e678d273c8f1ae1864c588bd0 SHA512 b24cb1f56c64fd6bd670ab513be418f8fb59e0d66b9ca74a1f952451a955ac2c83bcb625c12b892eab2b1ea517edd01a24f78c5fa95ea73f9118c052e050f0a8 WHIRLPOOL 2662118584242bc0a39587951946752447fe8f535fd33aa581bd894450a110e7b700009cf6e13360ec1611798845f722a7ab3d75126c274a4e87ecf6c9b94707
@@ -31,23 +32,14 @@ EBUILD btrfs-progs-3.14.2.ebuild 1369 SHA256 11e4954243e8292b76f4dab7aec58d27e43
 EBUILD btrfs-progs-3.16.1.ebuild 1377 SHA256 c1f4f4f0734be23b8533bf7da4cb32c40e3d2cfbeeedc688047d9b1a53d229eb SHA512 0ae219c030ccf466c71f809fdc0a6a2726f1a28eb062d7ed30910c6c34b97b2cfee567f7d589310609daddf15538b0fbcf98d25ed8b7fa8162463d4dc0aaaea2 WHIRLPOOL 68858bf6c05a4eaa68f98161045ec1d8e633f458a051a9ae3feb8dc44f86acae055f250a4d702cbe3a51d76a079e95702303e9eb7c33c71cc35a4b7e6d5bf858
 EBUILD btrfs-progs-3.16.2.ebuild 1377 SHA256 444b93c67a497a329c149617fff713754b56087e539d8b33d5c49e6a3e8c6e57 SHA512 edaa8c4161e3cb4a59b219f24c7078c34d2e65859c455dd085a08ab9d216ea8a1d27402642714d0037726d84184d6497938e7673ee183f6457010d419839f60a WHIRLPOOL a5863e05d4cf6ca65bc4bf1c3717cc9594fdb93a4bdd40519b5eaa7d907f0f9bf7d9db0216dadcd3c03c9a86c82e3c169db10c21fec31e1ea4c2b1d83eaedbf5
 EBUILD btrfs-progs-3.16.ebuild 1373 SHA256 c17cb67d182e0916c05da65e0c28aafe759b8bdb8e2898d62c5c5567812b9a3f SHA512 801f8bcb8159a3f7c9e3a91df67e49361656a70ec6ccfe1329e2a13b9eb6c74d0ee09431b36dd2eb7412a51313303e852435d6f93527357afc9b118246ee39b1 WHIRLPOOL 3bfa44f6ef5e50fd736748c245faf7b6f77aa776df2ff3e176f48b3ce415c760fbad68c56d49016a53d7059872cdf11c64c4a374a4784eb3bb9c9708da5da460
+EBUILD btrfs-progs-3.17.ebuild 1374 SHA256 afffe34a5be5c30fd44eb93ce55dd579b1f82fd905b6d8614f47f86b96212a87 SHA512 3df391fae3037637c725627c9f37f2df62b339d3f7e0a88346fd759c4ddbf40d67dbd5d250e6ba990f2ee251d081828b3ddc9db1bf39f94e119b2d3b3548c99e WHIRLPOOL 170f5b158501ad17cfd618d3d11c8bac553ed4021e07130bf02587c75e89c97af0a9a76658e696afbac099a72878599f88b3bcb32ca68769678ef70b40717074
 EBUILD btrfs-progs-9999.ebuild 1376 SHA256 7f7325f68d71e6ecd6fdef57551957d5237ccb1ac18646f89429d3ec128bb028 SHA512 0afdaf17c6e1345c7a8b3437435ef0a6dfd01285f39ad46f0fed3569c450e990e0f7a78282a5efa5df85befc61042ee08c1b4a9d9cdefa64b3410f30ac977dd9 WHIRLPOOL f0c45a6d62340ef796e038fd49d98d697a6ee1ada8abcda4daa7d0918b6ee9bd3a34014e69dcf387d92ed0f6ae6689251d6041331b864b09e6747cbdeb002a26
-MISC ChangeLog 13898 SHA256 60002326b7d8f487c8f20e77b28092c76d02f04889ccc552f665b6c65f412e25 SHA512 bf9c8793894ef9b07741fced287617b187e02bac0aa3d2ac82d9bb91bf0faacc05c877d570a6f716e06900f586fe7007d8c58f4a76cd8013485ab1e685530fb2 WHIRLPOOL 855fced678fbb5e4bacccd553540b5c7df8e48348f220308ab62138ea72108c355c0c526bf121dddced90b2096931403c08909407ef9340e61150b7e3603902e
+MISC ChangeLog 14031 SHA256 2674a71b4c5deeb6f8f58feec2e2fd1b8d7caccf36e0e8113bef896c76180612 SHA512 d88f2740e56bb681fa99159b62bd5cc219b3bb6587a678df8f04f31fe890ec7a1fc97328e63cf73b7fbe3b83ae1b8fe8e838bd8ed348467ea74a0e92653b09c3 WHIRLPOOL 04cdac754071374ff60a40fb777d751f5102b45f912e5dc388ff62123c504ab7dd2e0819fef556e4c418ee14147bc3c2b51f9ae6ff20587102a0f17c114ee581
 MISC metadata.xml 432 SHA256 45049c27e84490ae5258d3beaa9c6defe80360aa7f03733da492fd38d026a5e0 SHA512 1dda7aa3a62062d6b42579efff9468c08fcca001b28e180c8257291332ac1874f749a19a4053daec072d7b878c13873557f05d82ad42428f105556c4cd304460 WHIRLPOOL 970b4a981f1afbe87ad4240fc2dd5ebfc4bb134a2e3c188519ecb6a87d230b196a902381de3e6346855e68c6e92f883c4d6b4aa01bcdb090e2de8f230e1cecff
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUQno+AAoJELp701BxlEWfn5gP/jqh9jqu4Dd+IRSU3NyC6LKo
-hMqRAEkroryk58nOib5XcMVjA9NQqAvQMsmohH3R1x23G3SeB2fHYxxDeuN3M5Jp
-GqGJ/tFr4g918USEShErMVskmP3GinJ2wwBXasEcOAjGuFl7+Av4/XNVuwu7gg6X
-p8k4evxQotzSVmcd6ouTwuN1bb9AL44Sbk3mWQ7J2U3I5c+W2Lv/+RidDiqUuuI6
-UWPBqQleh71BYuzDa+I+B6wC7oRZoT+kZ8E/XwPIVd5IX80cCVECUg5RfIiR3mNl
-VXEnxUnx12vcwcl6LqOTXNKuQigjuFFRYfz9y6UJ0jO4vmYPxkoZcm3nXbv2hvWc
-0w/2k8PpootFKjE5jENQh6JlDiMNsS+Ib6Pg2ajMxfzeD751ZBDFSIra8p+J88EF
-mVPXngTaZ0n8WO67hC855Njw2/1a8Hp9g20WfP6gHGgARRayTJha2V46yeY7epzs
-jjDni0wCPmYSPuSN5EljolvNW0yTkvHAaUVj1xATVXbSgpDjsDgKrgLxHI8xYoN2
-Qipsy9Rv4AVry71oC8XaCePEr82WC4apcsgy7NN+g02qf+8GiYRnCrpR3yNP/x6J
-ybAo2qa0+KnO6hdYkf8ZXX6pERfSjxh0j/cEXAQhijaZlO/nj0i36eNu1lKjxmKl
-P02USZFDDnzZ/djguHC8
-=mgxq
+iEYEAREIAAYFAlRFd6EACgkQcaHudmEf86pfyQCeL1iXd/cpcFbDff2n8XUy3pzG
+puUAnj6iSfJkl2DpTYGJHXzptQ1x44t2
+=OvoT
 -----END PGP SIGNATURE-----
