@@ -1,6 +1,10 @@
 # ChangeLog for app-forensics/lynis
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-forensics/lynis/ChangeLog,v 1.54 2014/10/19 09:16:23 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-forensics/lynis/ChangeLog,v 1.55 2014/10/20 20:46:25 slyfox Exp $
+
+  20 Oct 2014; Sergei Trofimovich <slyfox@gentoo.org> lynis-1.6.3.ebuild:
+  Drop stale 'dev/TODO' referece (fixes bug #525856 by Toralf Förster, w0rm and
+  others).
 
 *lynis-1.6.3 (19 Oct 2014)
 
@@ -275,4 +279,3 @@
   07 Sep 2008; Friedrich Oslage <bluebird@gentoo.org> +files/lynis.cron,
   +metadata.xml, +lynis-1.2.1.ebuild:
   Inital import, thanks to Christian Ruppert, bug #232353
-
